--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,151 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Viewer</title>
-    <meta charset="UTF-8" />
-    <link href="/styles.css" rel="stylesheet" />
-  </head>
-  <body>
-    <video playsinline autoplay muted></video>
-    <button id="enable-audio">Enable audio</button>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/watch.js"></script>
-  </body>
-</html>
+
+<head>
+  <title>kk</title>
+  <meta charset="UTF-8" />
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.15/tailwind.min.css"
+    integrity="sha512-braXHF1tCeb8MzPktmUHhrjZBSZknHvjmkUdkAbeqtIrWwCchhcpUeAf2Sq3yIq1Q1x5PlroafjceOUbIE3Q5g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"
+    integrity="sha512-WL6WGKMPBiM9PnHRYIn5YEtq0Z8XP4fkVb4qy7PP4vhmYQErJ/dySyXuFIMDf1eEYCXCrQrMJfkNwKc9gsjTjA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</head>
+
+<body>
+  
+    <div class="header-2">
+      <nav class="bg-white py-2 md:py-4">
+        <div class="container px-4 mx-auto md:flex md:items-center">
+          <div class="flex justify-between items-center">
+            <a href="#" class="font-bold text-xl text-indigo-600">NNN</a>
+            <button
+              class="border border-solid border-gray-600 px-3 py-1 rounded text-gray-600 opacity-50 hover:opacity-75 md:hidden"
+              id="navbar-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <div class="hidden md:flex flex-col md:flex-row md:ml-auto mt-3 md:mt-0" id="navbar-collapse">
+            <a href="#" class="p-2 lg:px-4 md:mx-2 text-white rounded bg-indigo-600">Trang chủ</a>
+            <a href="#"
+              class="p-2 lg:px-4 md:mx-2 text-gray-600 rounded hover:bg-gray-200 hover:text-gray-700 transition-colors duration-300">Về chúng tôi</a>
+            <a href="#"
+              class="p-2 lg:px-4 md:mx-2 text-gray-600 rounded hover:bg-gray-200 hover:text-gray-700 transition-colors duration-300">Tính năng</a>
+            <a href="#"
+              class="p-2 lg:px-4 md:mx-2 text-gray-600 rounded hover:bg-gray-200 hover:text-gray-700 transition-colors duration-300">Giá</a>
+            <a href="#"
+              class="p-2 lg:px-4 md:mx-2 text-gray-600 rounded hover:bg-gray-200 hover:text-gray-700 transition-colors duration-300">Liên hệ</a>
+            <a href="#"
+              class="p-2 lg:px-4 md:mx-2 text-indigo-600 text-center border border-transparent rounded hover:bg-indigo-100 hover:text-indigo-700 transition-colors duration-300">Login</a>
+            <a href="#"
+              class="p-2 lg:px-4 md:mx-2 text-indigo-600 text-center border border-solid border-indigo-600 rounded hover:bg-indigo-600 hover:text-white transition-colors duration-300 mt-1 md:mt-0 md:ml-1">Signup</a>
+          </div>
+        </div>
+      </nav>
+      <div class="bg-indigo-100 py-6 md:py-12">
+        <div class="container px-4 mx-auto">
+          <div class="text-center max-w-2xl mx-auto">
+            <h1 class="text-3xl md:text-4xl font-medium mb-2">Trở thành người phát trực tiếp</h1>
+            <a href="/broadcast.html" class="bg-indigo-600 text-white py-2 px-6 rounded-full text-xl mt-10">Bắt đầu ngay</a>
+            <div class="mt-4">
+              <video class="d-block max-w-full rounded shadow-md" playsinline autoplay muted></video>
+              <button class="bg-red-600 text-white py-2 px-6 rounded-full text-xl mt-6" id="enable-audio">Mở loa</button>
+            </div>
+          </div>
+          <div class="md:flex md:flex-wrap md:-mx-4 mt-6 md:mt-12">
+            <div class="md:w-1/3 md:px-4 xl:px-6 mt-8 md:mt-0 text-center">
+              <span class="w-20 border-t-2 border-solid border-indigo-200 inline-block mb-3"></span>
+              <h5 class="text-xl font-medium uppercase mb-4">WebRTC</h5>
+              <p class="text-gray-600">FWR blocks bring in an air of WebRTC with their creative layouts and blocks,
+                which are easily customizable</p>
+            </div>
+            <div class="md:w-1/3 md:px-4 xl:px-6 mt-8 md:mt-0 text-center">
+              <span class="w-20 border-t-2 border-solid border-indigo-200 inline-block mb-3"></span>
+              <h5 class="text-xl font-medium uppercase mb-4">Signaling</h5>
+              <p class="text-gray-600">FWR blocks are the cleanest pieces of HTML blocks, which are built with utmost care
+                to quality and usability.</p>
+            </div>
+            <div class="md:w-1/3 md:px-4 xl:px-6 mt-8 md:mt-0 text-center">
+              <span class="w-20 border-t-2 border-solid border-indigo-200 inline-block mb-3"></span>
+              <h5 class="text-xl font-medium uppercase mb-4">Web Application</h5>
+              <p class="text-gray-600">FWR blocks is a Web Application for designers, developers and agencies looking to create
+                stunning websites in no time.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </body>
+  <script>
+    let peerConnection;
+    const config = {
+      iceServers: [
+        {
+          "urls": "stun:stun.l.google.com:19302",
+        },
+      ]
+    };
+
+    const socket = io.connect(window.location.origin);
+    const video = document.querySelector("video");
+    const enableAudioButton = document.querySelector("#enable-audio");
+
+    enableAudioButton.addEventListener("click", enableAudio)
+
+    socket.on("offer", (id, description) => {
+      peerConnection = new RTCPeerConnection(config);
+      peerConnection
+        .setRemoteDescription(description)
+        .then(() => peerConnection.createAnswer())
+        .then(sdp => peerConnection.setLocalDescription(sdp))
+        .then(() => {
+          socket.emit("answer", id, peerConnection.localDescription);
+        });
+      peerConnection.ontrack = event => {
+        video.srcObject = event.streams[0];
+      };
+      peerConnection.onicecandidate = event => {
+        if (event.candidate) {
+          socket.emit("candidate", id, event.candidate);
+        }
+      };
+      console.log("offer m");
+    });
+
+
+    socket.on("candidate", (id, candidate) => {
+      peerConnection
+        .addIceCandidate(new RTCIceCandidate(candidate))
+        .catch(e => console.error(e));
+        console.log("being candidate")
+    });
+
+    socket.on("connect", () => {
+      alert("connect want to watcher")
+      socket.emit("watcher");
+    });
+
+    window.onunload = window.onbeforeunload = () => {
+      socket.close();
+      peerConnection.close();
+    };
+
+    function enableAudio() {
+      console.log("Enable audio")
+      video.muted = false;
+      //   let constraints = { audio: false, video: { width: 1280, height: 720 } };
+
+      //   navigator.mediaDevices.getUserMedia(constraints)
+      //   .then(function(mediaStream) {
+      //     var video = document.querySelector('video');
+      //     video.srcObject = mediaStream;
+      //     video.onloadedmetadata = function(e) {
+      //       video.play();
+      //     };
+      //     alert("ok")
+      //   })
+      //   .catch(function(err) { alert("rtttt") }); 
+    }
+  </script>
+  </html>
